--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
     "license": "MIT",
     "scripts": {
         "start": "concurrently \"nuxt\" \"npm run db\"\n",
+        "build": "nuxt build",
         "db": "json-server --watch db/db.json --routes db/routes.json --port 3030"
     },
     "dependencies": {
         "@nuxtjs/auth": "4.8.4",
         "@nuxtjs/axios": "5.8.0",
         "@nuxtjs/proxy": "1.3.3",
+        "@nuxtjs/pwa": "^3.0.0-beta.19",
+        "@nuxtjs/vuetify": "1.9.0",
+        "concurrently": "5.0.0",
         "cookie-parser": "1.4.4",
         "express-jwt": "5.3.1",
         "json-server": "0.15.1",
         "mini-toastr": "0.8.1",
         "node-sass": "4.13.0",
         "nuxt": "2.10.2",
-        "sass-loader": "8.0.0",
-        "concurrently": "5.0.0",
-        "@nuxtjs/vuetify": "1.9.0"
+        "sass-loader": "8.0.0"
     },
     "devDependencies": {}
 }
